syntax = "proto3";

package io.harness.perpetualtask.example;

message SamplePerpetualTaskParams {
    string country = 1;
}
